Salesforce/main/default/main/default/objects/Cidade__c/Cidade__c.object-meta.xml
<CustomObject>
    <label>Ciudad</label>
    <nameField>
        <label>Nome da Cidade</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ciudades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>