Salesforce/main/default/main/default/objects/Cidade__c/fields/altitude__c.field-meta.xml
<CustomField>
    <fullName>altitude__c</fullName>
    <label>Altitude</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>