Salesforce/main/default/main/default/objects/Cidade__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estado</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipName>Cidades</relationshipName>
    <type>Lookup</type>
</CustomField>