Salesforce/main/default/main/default/objects/Cidade__c/fields/Gerente__c.field-meta.xml
<CustomField>
    <fullName>Gerente__c</fullName>
    <label>Gerente</label>
    <length>40</length>
    <type>Text</type>
</CustomField>