Salesforce/main/default/main/default/objects/Cidade__c/fields/Map_Link__c.field-meta.xml
<CustomField>
    <fullName>Map_Link__c</fullName>
    <formula>&quot;http://maps.googleapis.com/maps/api/staticmap?center=&quot; &amp; TEXT(GeoPosicion__Latitude__s) &amp; &quot;,&quot; &amp; TEXT( GeoPosicion__Longitude__s ) &amp; &quot;&amp;zoom=11&amp;size=300x300&amp;sensor=true&amp;markers=color:red%7Clabel:A%7C&quot;&amp; TEXT(GeoPosicion__Latitude__s) &amp; &quot;,&quot; &amp; TEXT(GeoPosicion__Longitude__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map Link</label>
    <type>Text</type>
</CustomField>