Salesforce/main/default/main/default/objects/Cidade__c/fields/Mapa__c.field-meta.xml
<CustomField>
    <fullName>Mapa__c</fullName>
    <formula>IF( OR( ISBLANK( GeoPosicion__Latitude__s ) , ISBLANK( GeoPosicion__Longitude__s ) ) , &quot;Coordenadas incompletas&quot;, IMAGE( Map_Link__c , &quot;&quot;, 300,300))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mapa</label>
    <type>Text</type>
</CustomField>