Salesforce/main/default/main/default/objects/Cidade__c/fields/Mesorregion__c.field-meta.xml
<CustomField>
    <fullName>Mesorregion__c</fullName>
    <label>Mesorregião</label>
    <length>80</length>
    <type>Text</type>
</CustomField>