Salesforce/main/default/main/default/objects/Cidade__c/fields/Micro_UF__c.field-meta.xml
<CustomField>
    <fullName>Micro_UF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Micro-UF</label>
    <referenceTo>Micro_UF__c</referenceTo>
    <relationshipLabel>Ciudades</relationshipLabel>
    <relationshipName>Ciudades</relationshipName>
    <type>Lookup</type>
</CustomField>