Salesforce/main/default/main/default/objects/Cidade__c/fields/Pendiente_de_Validar__c.field-meta.xml
<CustomField>
    <fullName>Pendiente_de_Validar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la Ciudad ya está validada o Pendiente de Validar(para las ciudades dadas de alta a través del Portal</description>
    <inlineHelpText>Indica si la Ciudad ya está validada o Pendiente de Validar(para las ciudades dadas de alta a través del Portal</inlineHelpText>
    <label>Pendentes de validação</label>
    <type>Checkbox</type>
</CustomField>