Salesforce/main/default/main/default/objects/Cidade__c/fields/Regiao_GDM__c.field-meta.xml
<CustomField>
    <fullName>Regiao_GDM__c</fullName>
    <label>Região GDM</label>
    <length>40</length>
    <type>Text</type>
</CustomField>